Tue Feb 16 09:51:20 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (without_destdir): just strip a drive letter
	  which is prepended by with_destdir.
	  pointed out by @DavidEGrayson.
	  https://github.com/ruby/ruby/commit/0e5f9ae#commitcomment-16101763

Tue Feb 16 04:42:13 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* insns.def (opt_plus): simply use LONG2NUM() instead of wrongly
	      complex overflow case.

	* insns.def (opt_sub): ditto.

Tue Feb 16 02:49:41 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/rbinstall.rb (without_destdir): compare with the destdir
	  after stripping a drive letter, on dosish platforms.
	  pointed out by @DavidEGrayson.
	  https://github.com/ruby/ruby/commit/d0cf23b#commitcomment-16100407

Mon Feb 15 15:44:09 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parse_ident): allow keyword arguments just after a
	  method where the same name local variable is defined.
	  [ruby-core:73816] [Bug#12073]

Mon Feb 15 14:43:28 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode/case-folding.rb: Added debugging option
	  (with Kimihito Matsui)

Sun Feb 14 17:31:50 2016  Lars Kanis  <lars@greiz-reinsdorf.de>

	* lib/mkmf.rb (with_{cpp,c,ld}flags): copy caller strings not to
	  be modified, in append_{cpp,c,ld}flags respectively.
	  [Fix GH-1246]

Sun Feb 14 16:18:57 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (setup_exception): set the cause only if it is explicitly
	  given or not set yet.  [Bug #12068]

Sat Feb 13 21:44:58 2016  Tanaka Akira  <akr@fsij.org>

	* hash.c (rb_hash_invert): [DOC] more examples.

Sat Feb 13 17:30:49 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#find_proxy): support CIDR in
	  no_proxy.  [ruby-core:73769] [Feature#12062]

Sat Feb 13 17:11:58 2016  Fabian Wiesel  <fabian.wiesel@sap.com>

	* lib/uri/generic.rb (find_proxy): exclude white-spaces and allow
	  for a leading dot in the domain name in no_proxy.